query_engine/src/tests/snapshots/query_engine__tests__test_parser__tests__ast@3.snap
---
source: src/tests/test_parser.rs
expression: "(input, query)"
---
- "SELECT column FROM \"test\";"
- Select:
    select_exprs:
      - Column: column
    table_ref:
      String: test
