query_engine/src/tests/snapshots/query_engine__tests__test_parser__tests__ast@4.snap
---
source: src/tests/test_parser.rs
expression: "(input, query)"
---
- "SELECT \"column\";"
- Select:
    select_exprs:
      - Literal:
          String: column
    table_ref: ~
