query_engine/src/tests/snapshots/query_engine__tests__test_parser__tests__ast@6.snap
---
source: src/tests/test_parser.rs
expression: "(input, query)"
---
- SELECT 5.5;
- Select:
    select_exprs:
      - Literal:
          Float: 5.5
    table_ref: ~
