query_engine/src/tests/snapshots/query_engine__tests__test_parser__tests__select_query_ast-3.snap
---
source: src/tests/test_parser.rs
expression: "(input, query)"
---
- SELECT * FROM users;
- select_exprs:
    - All
  table_ref:
    Identifier: users
