query_engine/src/tests/snapshots/query_engine__tests__test_parser__tests__select_query_ast-4.snap
---
source: src/tests/test_parser.rs
expression: "(input, query)"
---
- "SELECT \"column\";"
- select_exprs:
    - Immediate:
        String: column
  table_ref: ~
