query_engine/src/tests/snapshots/query_engine__tests__test_parser__tests__select_query_ast-6.snap
---
source: src/tests/test_parser.rs
expression: "(input, query)"
---
- SELECT 5;
- select_exprs:
    - Immediate:
        Int: 5
  table_ref: ~
